<resources>
    <string name="app_name">Sraya</string>

    <string name="form_password">Password</string>
    <string name="form_handphone">Nomor Handphone</string>
    <string name="form_name">Nama</string>
    <string name="form_email">Email</string>
    <string name="form_contact">Kontak</string>

    <string name="title_activity_home">Sraya</string>
    <string name="title_home">Home</string>
    <string name="title_protection">Protection</string>
    <string name="title_tell">Please Tell Me</string>
    <string name="title_report">Report</string>
    <string name="form_report_where">Di mana Anda mengalami kejadian tersebut?</string>
    <string name="form_report_when">Kapan Anda mengalami kejadian tersebut?</string>
    <string name="form_report_how">Bagaimana kronologinya?</string>
    <string name="form_report_upload">Upload foto</string>
    <string name="form_report_create">Buat laporan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="laporan_telah_dibuat">Laporan telah dibuat</string>
    <string name="silahkan_ditunggu_kelanjutannya">Silahkan ditunggu kelanjutannya</string>
    <string name="ditujukan_kepada">Ditujukan kepada:</string>
    <string name="waktu">Waktu:</string>
    <string name="keluhan">Keluhan:</string>
    <string name="ok">Ok</string>
    <string name="hint_chat">Ketik permasalahan Anda</string>
    <string name="form_report_add_photo">+ Foto</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Est lorem ipsum dolor sit amet consectetur adipiscing elit.</string>

    <!-- Login and Register texts -->
    <string name="login">Login</string>
    <string name="image_login">Gambar Login</string>
    <string name="no_handphone">No Handphone</string>
    <string name="pass_hint">Text your password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login_ket">Belum punya akun ?</string>
    <string name="min_length_char">Minimal Length %1$d characters</string>
    <string name="invalid_phone">Format No Handphone tidak sesuai!</string>
    <string name="email_hint">Masukan No Handphone</string>
    <string name="register_ket">Sudah memiliki akun ?</string>
    <string name="name">Nama</string>
    <string name="name_hint">Masukan nama</string>
    <string name="nik">NIK</string>
    <string name="nik_hint">Masukkan NIK</string>
    <string name="designed_by">Designed By Sraya_Team</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="masukkan_jenis_kelamin">masukkan jenis kelamin</string>
    <string name="email">Email</string>
    <string name="masukkan_email">masukkan email</string>
    <string name="kontak">Kontak</string>
    <string name="logout">Logout</string>
    <string name="btnlogin">LOGIN</string>
    <string name="ketlogin">Belum Memiliki Akun ?</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
</resources>