<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_register_name"
        android:paddingBottom="0dp"
        style="@style/FormEditText"
        android:hint="@string/form_name"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_register_handphone"

        android:paddingBottom="0dp"
        style="@style/FormEditText"
        android:hint="@string/form_handphone"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_register_name"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_register_email"
        android:paddingBottom="0dp"
        style="@style/FormEditText"
        android:hint="@string/form_email"
        app:startIconDrawable="@drawable/ic_mail_fill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_register_handphone"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/FormEditText"
        android:hint="@string/form_password"
        app:startIconDrawable="@drawable/ic_lock_2_fill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_register_email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_register_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        style="@style/FormEditText"
        android:hint="@string/form_contact"
        app:startIconDrawable="@drawable/ic_contacts_book_2_fill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_register_password"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Daftar"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/input_layout_register_contact"
        />
</androidx.constraintlayout.widget.ConstraintLayout>